--- a/prueba/inicio/templates/inicio/encabezado.html
+++ b/prueba/inicio/templates/inicio/encabezado.html
@@ -58,6 +58,17 @@
 
 		<!-- Barra de menú -->
 		<div class="sidebar">
+			<!-- Imagen de Usuario -->
+			<div class="user-menu dropdown">
+				<a href="#">
+					<img src="{%block imagen%}{%endblock%}">
+					<div class="user-info">
+						{%block modulo%}{%endblock%} <span>DSM</span>
+					</div>
+				</a>
+			</div>
+			<!-- /Imagen de Usuario -->
+
 			<div class="sidebar-content">
 				<!-- Menú de navegación -->
 				<ul class="navigation">
@@ -70,12 +81,36 @@
 		</div>
 		<!-- /sidebar -->
 
+		<!-- Contenido Principal-->
+        <div class="page-content">
+			{%block encabezado%}{%endblock%}
 
-        <!--CONTENIDO-->
-        {% block contenido %}<!--Template tag-->
-        <!--block sirve para indicar que colocaremos un bloque de contenido a través de -->
+			<!-- Barra de navegación-->
+			<div class="breadcrumb-line">
+				<ul class="breadcrumb">
 
-        {% endblock %}
+					<a href="{%url 'Principal'%}">
+						{%if request.path == '/' %}
+							Principal
+						{%else%}
+							Principal{{request.path}}
+						{%endif%}
+					</a>
+					
+				</ul>
+			</div>
+			<!-- Barra de navegación-->
+
+			<!--CONTENIDO-->
+			{% block contenido %}<!--Template tag-->
+			<!--block sirve para indicar que colocaremos un bloque de contenido a través de -->
+
+			{% endblock %}
+
+
+			 
+		</div>
+		<!-- /Contenido Principal-->
 	</div>
 </body>
 </html>
