--- a/prueba/inicio/templates/inicio/encabezado.html
+++ b/prueba/inicio/templates/inicio/encabezado.html
@@ -6,7 +6,7 @@
 <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1, maximum-scale=1">
 <title>{%block titulo%}{%endblock%}</title>
 
-{% load static %}
+{%load static%}
 <link href="{% static 'inicio/css/bootstrap.min.css'%}" rel="stylesheet" type="text/css">
 <link href="{% static 'inicio/css/londinium-theme.css'%}" rel="stylesheet" type="text/css">
 <link href="{% static 'inicio/css/styles.css'%}" rel="stylesheet" type="text/css">
@@ -16,36 +16,37 @@
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.2/jquery-ui.min.js"></script>
 
-<script type="text/javascript" src="js/plugins/charts/sparkline.min.js"></script>
+<script type="text/javascript" src="{% static 'inicio/js/plugins/charts/sparkline.min.js'%}"></script>
 
-<script type="text/javascript" src="js/plugins/forms/uniform.min.js"></script>
-<script type="text/javascript" src="js/plugins/forms/select2.min.js"></script>
-<script type="text/javascript" src="js/plugins/forms/inputmask.js"></script>
-<script type="text/javascript" src="js/plugins/forms/autosize.js"></script>
-<script type="text/javascript" src="js/plugins/forms/inputlimit.min.js"></script>
-<script type="text/javascript" src="js/plugins/forms/listbox.js"></script>
-<script type="text/javascript" src="js/plugins/forms/multiselect.js"></script>
-<script type="text/javascript" src="js/plugins/forms/validate.min.js"></script>
-<script type="text/javascript" src="js/plugins/forms/tags.min.js"></script>
-<script type="text/javascript" src="js/plugins/forms/switch.min.js"></script>
+<script type="text/javascript" src="{% static 'inicio/js/plugins/forms/uniform.min.js'%}"></script>
+<script type="text/javascript" src="{% static 'inicio/js/plugins/forms/select2.min.js'%}"></script>
+<script type="text/javascript" src="{% static 'inicio/js/plugins/forms/inputmask.js'%}"></script>
+<script type="text/javascript" src="{% static 'inicio/js/plugins/forms/autosize.js'%}"></script>
 
-<script type="text/javascript" src="js/plugins/forms/uploader/plupload.full.min.js"></script>
-<script type="text/javascript" src="js/plugins/forms/uploader/plupload.queue.min.js"></script>
+<script type="text/javascript" src="{% static 'inicio/js/plugins/forms/inputlimit.min.js'%}"></script>
+<script type="text/javascript" src="{% static 'inicio/js/plugins/forms/listbox.js'%}"></script>
+<script type="text/javascript" src="{% static 'inicio/js/plugins/forms/multiselect.js'%}"></script>
+<script type="text/javascript" src="{% static 'inicio/js/plugins/forms/validate.min.js'%}"></script>
+<script type="text/javascript" src="{% static 'inicio/js/plugins/forms/tags.min.js'%}"></script>
+<script type="text/javascript" src="{% static 'inicio/js/plugins/forms/switch.min.js'%}"></script>
 
-<script type="text/javascript" src="js/plugins/forms/wysihtml5/wysihtml5.min.js"></script>
-<script type="text/javascript" src="js/plugins/forms/wysihtml5/toolbar.js"></script>
+<script type="text/javascript" src="{% static 'inicio/js/plugins/forms/uploader/plupload.full.min.js'%}"></script>
+<script type="text/javascript" src="{% static 'inicio/js/plugins/forms/uploader/plupload.queue.min.js'%}"></script>
 
-<script type="text/javascript" src="js/plugins/interface/daterangepicker.js"></script>
-<script type="text/javascript" src="js/plugins/interface/fancybox.min.js"></script>
-<script type="text/javascript" src="js/plugins/interface/moment.js"></script>
-<script type="text/javascript" src="js/plugins/interface/jgrowl.min.js"></script>
-<script type="text/javascript" src="js/plugins/interface/datatables.min.js"></script>
-<script type="text/javascript" src="js/plugins/interface/colorpicker.js"></script>
-<script type="text/javascript" src="js/plugins/interface/fullcalendar.min.js"></script>
-<script type="text/javascript" src="js/plugins/interface/timepicker.min.js"></script>
+<script type="text/javascript" src="{% static 'inicio/js/plugins/forms/wysihtml5/wysihtml5.min.js'%}"></script>
+<script type="text/javascript" src="{% static 'inicio/js/plugins/forms/wysihtml5/toolbar.js'%}"></script>
 
-<script type="text/javascript" src="js/bootstrap.min.js"></script>
-<script type="text/javascript" src="js/application.js"></script>
+<script type="text/javascript" src="{% static 'inicio/js/plugins/interface/daterangepicker.js'%}"></script>
+<script type="text/javascript" src="{% static 'inicio/js/plugins/interface/fancybox.min.js'%}"></script>
+<script type="text/javascript" src="{% static 'inicio/js/plugins/interface/moment.js'%}"></script>
+<script type="text/javascript" src="{% static 'inicio/js/plugins/interface/jgrowl.min.js'%}"></script>
+<script type="text/javascript" src="{% static 'inicio/js/plugins/interface/datatables.min.js'%}"></script>
+<script type="text/javascript" src="{% static 'inicio/js/plugins/interface/colorpicker.js'%}"></script>
+<script type="text/javascript" src="{% static 'inicio/js/plugins/interface/fullcalendar.min.js'%}"></script>
+<script type="text/javascript" src="{% static 'inicio/js/plugins/interface/timepicker.min.js'%}"></script>
+
+<script type="text/javascript" src="{% static 'inicio/js/bootstrap.min.js'%}"></script>
+<script type="text/javascript" src="{% static 'inicio/js/application.js'%}"></script>
 
 </head>
 
@@ -58,59 +59,58 @@
 
 		<!-- Barra de menú -->
 		<div class="sidebar">
-			<!-- Imagen de Usuario -->
+
+			<!-- Imagen de usuario -->
+
 			<div class="user-menu dropdown">
 				<a href="#">
 					<img src="{%block imagen%}{%endblock%}">
 					<div class="user-info">
-						{%block modulo%}{%endblock%} <span>DSM</span>
+						{%block Nombre%}{%endblock%} <span>DSM</span>
 					</div>
 				</a>
 			</div>
-			<!-- /Imagen de Usuario -->
 
 			<div class="sidebar-content">
 				<!-- Menú de navegación -->
 				<ul class="navigation">
 							<li><a href="{%url 'Principal'%}">Principal</a></li>
-							<li><a href="{%url 'Formulario'%}">Registro</a></li>		
-							<li><a href="{%url 'Contacto'%}">Contacto</a></li>		
+							<li><a href="{%url 'Contacto'%}">Contacto</a></li>
+							<li><a href="{%url 'Comentarios'%}">Consulta Contacto</a></li>
+                            <li><a href="{%url 'Formulario'%}">Formulario</a></li>				
 				</ul>
 				<!-- /Fin menú -->
 			</div>
 		</div>
 		<!-- /sidebar -->
+		
 
-		<!-- Contenido Principal-->
-        <div class="page-content">
-			{%block encabezado%}{%endblock%}
 
-			<!-- Barra de navegación-->
+		<div class="page-content">
+
+			{%block encabezado%}{%endblock%} 
+			
+			<!--Barra de navegacion 2-->
 			<div class="breadcrumb-line">
 				<ul class="breadcrumb">
-
+					
 					<a href="{%url 'Principal'%}">
-						{%if request.path == '/' %}
+						{%if request.path == '/'%}
 							Principal
 						{%else%}
 							Principal{{request.path}}
 						{%endif%}
 					</a>
-					
+	
 				</ul>
-			</div>
-			<!-- Barra de navegación-->
-
-			<!--CONTENIDO-->
-			{% block contenido %}<!--Template tag-->
-			<!--block sirve para indicar que colocaremos un bloque de contenido a través de -->
-
-			{% endblock %}
-
-
-			 
 		</div>
-		<!-- /Contenido Principal-->
+		
+		{%block contenido%}
+
+        {% endblock %}
+
+			
+
 	</div>
 </body>
 </html>
