--- a/prueba/registros/templates/registros/principal.html
+++ b/prueba/registros/templates/registros/principal.html
@@ -5,6 +5,7 @@
 	{%load static%} 
 	{%static 'inicio/images/home.png'%}
 {%endblock%}
+
 {%block modulo%}Principal{%endblock%}
 {%block encabezado%}
 	<h3>Alumnos</h3>
@@ -24,15 +25,17 @@
         </tr>
     </thead>
     <tbody>
+        {% for alumno in 9B %}
         <tr>
             <td class="text-center">
-                <img src="" alt="" class="img-media">
+                <img src="{{alumno.imagen.url}}" alt="" class="img-media">
             </td>
-            <td class="text-semibold">UTM1234TIC</td>
-            <td class="muted">Nathalia</td>
-            <td class="muted">Tic</td>
-            <td class="muted">Matutino</td>
+            <td class="text-semibold">{{alumno.matricula}}</td>
+            <td class="muted">{{alumno.nombre}}</td>
+            <td class="muted">{{alumno.carrera}}</td>
+            <td class="muted">{{alumno.turno}}</td>
         </tr>
+        {% endfor %}
     </tbody>
 </table>
 
