--- a/prueba/registros/templates/registros/consultaContacto.html
+++ b/prueba/registros/templates/registros/consultaContacto.html
@@ -32,7 +32,7 @@
                 <a href="{% url 'Eliminar' coment.id %}" style="text-decoration: none; color: #337ab7;">Eliminar</a>
             </td>
             <td style="border: 1px solid #ddd; padding: 8px; text-align: center;">
-                <a href="{% url 'Editar' coment.id %}" style="border: 1px solid #ddd; padding: 8px; color: #666;">Editar</a>
+                <a href="{% url 'ConsultaIndividual' coment.id %}" style="text-decoration: none; color: #337ab7;">Editar</a>
             </td>
         </tr>
         {% endfor %}
